<resources>
    <string name="app_name">HCF Inventory App</string>

    <!-- AddItemUIS -->
    <string name="form_inventory_number">Inventory number</string>
    <string name="form_item_name">Item name</string>
    <string name="form_item_amount">Amount</string>
    <string name="form_item_location">Location</string>
    <string name="form_item_ean">EAN</string>
    <string name="add_item">Add item</string>
    <string name="error_not_empty">This field must not be empty</string>
    <string name="error_min_zero">This value must not be negative</string>
    <string name="error_no_ean">This value is no EAN</string>
    <string name="error_could_not_save_to_database">Could not save to database</string>
    <string name="error_field_specific_but_no_view">"An error occurred in field %1$s from Object %2$s: %3$s"
    </string>
</resources>
